--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script src="./images/data_file.js"></script>
 <script>
 //Sets up the map
-mapboxgl.accessToken = 'pk.eyJ1IjoiY3R3aGl0ZSIsImEiOiItb0dqdUlZIn0.4Zb1DGESXnx0ePxMVLihZQ';
+mapboxgl.accessToken = 'pk.eyJ1Ijoia2Vqb25lczgiLCJhIjoiY2s2cG9yaTQ3MW94NzNkcWZncnQ5N2wzdyJ9.BcCXtXBnmdjkni4NGCAY6A';
 var map = new mapboxgl.Map({
     container: 'map',
     zoom: 12,
